--- a/Module2-assignment/CSS/style.css
+++ b/Module2-assignment/CSS/style.css
@@ -1,1 +1,85 @@
-<!--basic styles -->
+/*basic styles */
+* {
+    box-sizing: border-box;
+    font-family: Helvetica, san-serif;
+    /* margin: 0px; */
+  }
+
+h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#c {
+    background-color: #ed9e9e;
+}
+
+#b {
+    background-color: #cc5555;
+    color: white;
+}
+
+#s {
+    background-color: #f7e78c;
+}
+.col-1, .col-2, .col-3 {
+    background-color: gray;
+    border: 3px solid black;
+    padding: 10px;
+    margin-bottom: 20px;
+    position: relative;
+    width: 90%;
+}
+
+p {
+    padding-top: 15px;
+}
+
+#c, #b, #s {
+    width: 125px;
+    height: 35px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    font-size: 16px;
+    border-left: 2px solid black;
+    border-bottom: 2px solid black;
+    margin: 0;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.row {
+    width: 100%;
+    position: relative;
+}
+/*desktop*/
+@media (min-width: 992px) {
+    .desk {
+        float: left;
+        width: 31.33%;
+        margin-left: 17px;
+    }
+}
+/*tablet*/
+@media (min-width: 768px) and (max-width: 991px) {
+    .tab{
+        float: left;
+        margin-left: 20px;
+    }
+    .col-1, .col-2 {
+        width: 46.3%;
+    }
+    .col-3 {
+        width: 95%;
+    }
+}
+
+/*mobile*/
+@media (max-width: 767px) {
+    .mob {
+        float: left;
+        width: 95%;
+        margin-left: 10px;
+    }
+}
