--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,12 +22,17 @@ h2 {
     background-color: #f7e78c;
 }
 .col-1, .col-2, .col-3 {
-    background-color: gray;
-    border: 3px solid black;
     padding: 10px;
-    margin-bottom: 20px;
-    position: relative;
+    margin: 0;
     width: 90%;
+}
+
+section {
+   background-color: gray;
+   border: 3px solid black;
+   position: relative;
+   margin: 10px;
+   padding: 10px;
 }
 
 p {
@@ -56,21 +61,19 @@ p {
 @media (min-width: 992px) {
     .desk {
         float: left;
-        width: 31.33%;
-        margin-left: 17px;
+        width: 33.33%;
     }
 }
 /*tablet*/
 @media (min-width: 768px) and (max-width: 991px) {
     .tab{
         float: left;
-        margin-left: 20px;
     }
     .col-1, .col-2 {
-        width: 46.3%;
+        width: 50%;
     }
     .col-3 {
-        width: 95%;
+        width: 100%;
     }
 }
 
@@ -78,7 +81,6 @@ p {
 @media (max-width: 767px) {
     .mob {
         float: left;
-        width: 95%;
-        margin-left: 10px;
+        width: 100%;
     }
 }
