--- a/Assignment-3/css/styles.css
+++ b/Assignment-3/css/styles.css
@@ -12,7 +12,7 @@ section {
    margin-bottom: 25px;
    padding: 10px;
 }
-.navbar-default .navbar-nav>li>a {
-
-}
+/* #nav-list .navbar-nav>li>a {
+   color: black;
+} */
 /* main content*/
